# cryptode

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  Makefile.am  README.adoc  README.debian  README.md  build_deb_pkg.sh  build_epel_rpm.sh  build_macos.sh  build_macos_pkg.sh  build_pkg_macos.sh  configure.ac  upload_release.sh.in
ci/: checkpatch.pl.patch  install.sh  install_deps.sh  main.sh  run_tests.sh
ci/profile/: cryptoded_linux_default.conf  cryptoded_osx_default.conf  dh.pem  rvd_linux_default.conf  rvd_linux_default.json  rvd_osx_default.json  server.ovpn
conf/: rvd.json
doc/: README.command.md  README.config.md  README.md  config.json.example  rvc.nos  rvd.nos
etc/: Makefile.am  cryptode.nos  cryptoded.conf.in  cryptoded.nos  rvd.conf.in  rvd.json.in  rvd.noc  rvd.nos
examples/import-profiles/: openvpn-example.ovpn
examples/import-profiles/tunnelblick-example1.tblk/Contents/Resources/: tunnelblick-example1.ovpn
examples/import-profiles/tunnelblick-example2.tblk/Contents/Resources/: ca.crt  client.crt  client.key  tunnelblick-example2.ovpn
m4/: ax_check_jsonc.m4  ax_check_nereon.m4  ax_check_openssl.m4  ax_check_ucl.m4
plist/: com.ribose.rvd.plist
src/: Makefile.am  cmd.c  cmd.h  coc_shared.c  coc_shared.h  common.h  conf.c  conf.h  conf.nos  cryptode.c  cryptode.nos  cryptoded.c  cryptoded.h  cryptoded.nos.in  json.c  json.h  log.c  log.h  rvc.c  rvc.h  rvc.nos  rvc_shared.c  rvc_shared.h  rvcd_console.c  rvd.c  rvd.h  rvd.nos  rvd.nos.in  util.c  util.h  vpn.c  vpn.h
src/rvcd/: README.md  configure.ac
src/rvcd/src/: Makefile.am  cmd.c  cmd.h  common.h  config.c  config.h  log.c  log.h  rvcd.c  rvcd.h  rvcd_console.c  util.c  util.h  vpn.c  vpn.h
tests/: Makefile.am  cryptoded_tests.c  permission_check.c  runtests.sh  rvd_tests.c
tests/profile/: auto-connect.json  auto-connect.noc  pre-exec-failed.json  pre-exec-failed.noc  pre-exec-success.json  pre-exec-success.noc  test.json  test.ovpn
utils/: Makefile.am  dns_util.sh
